# sha1sum

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  app.ccm  hash.ccm  istream.ccm  main.cc  options.ccm  project.ccm.in  project.hh.in
